@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-09T00:58:38Z",
-  "count_outdated" : 95,
-  "uniques_outdated" : 77,
+  "timestamp" : "2025-03-16T01:12:34Z",
+  "count_outdated" : 96,
+  "uniques_outdated" : 78,
   "count" : 97,
   "uniques" : 79,
   "clones" : [
-    {
-      "timestamp": "2025-03-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-08T00:00:00Z",
       "count": 1,
